--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ base64 = "0.13"
 chrono = "0.4.15"
 claim = "0.5"
 config = "0.11"
+htmlescape = "0.3"
 rand = {version = "0.8", features = ["std_rng"]}
 reqwest = {version = "0.11", default-features = false, features = ["json", "rustls-tls"]}
 secrecy = {version = "0.8", features = ["serde"]}
